--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
 		"bootstrap-icons": "^1.11.3",
 		"react": "19.0.0",
 		"react-bootstrap": "^2.10.8",
-		"react-dom": "19.0.0",
-		"sass": "^1.83.4"
+		"react-dom": "19.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
